# demand-cli

./: .gitignore  API_EXAMPLES.md  Cargo.toml  README.md  config.toml  rust-toolchain.toml  test_websocket.html
.github/workflows/: build.yml  checks.yml
dashboard/: README.md  env.example.txt  package.json  pnpm-lock.yaml
dashboard/src/: middleware.ts
dashboard/src/api/: proxy-api.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx
dashboard/src/app/dashboard/overview/: layout.tsx  page.tsx
dashboard/src/components/: icons.tsx
dashboard/src/components/layout/: app-sidebar.tsx  header.tsx
dashboard/src/components/modal/: selected-transactions-modal.tsx  stats-modal.tsx  transaction-summary-modal.tsx
dashboard/src/components/ui/: faceted.tsx  modal.tsx
dashboard/src/components/ui/table/: data-table-advanced-toolbar.tsx  data-table-faceted-filter.tsx  data-table-filter-list.tsx  data-table-filter-menu.tsx  data-table-sort-list.tsx  data-table.tsx
dashboard/src/constants/: data.ts
dashboard/src/features/kanban/utils/: store.ts
dashboard/src/features/overview/components/: selected-transactions-modal.tsx  transaction-columns.tsx  transactions-table.tsx
dashboard/src/hooks/: use-data-table.ts  use-mempool-transactions.ts
dashboard/src/lib/: export.ts  format.ts  parsers.ts  utils.ts
dashboard/src/types/: mempool-transaction.ts  proxy-stats.ts
dashboard_build/: 404.html  dashboard.html  dashboard.txt  index.html  index.txt
dashboard_build/_next/static/chunks/: 175-f3a235d8332f556c.js  268-fb6e4d3326d0ab7f.js  431-f84c2a4dc2c04831.js  645-c7c60b6fcfe5d7bd.js  688-16be1a70abca69b5.js  webpack-0138f082efe79cb6.js
dashboard_build/_next/static/chunks/app/: global-error-1ee3fd20486ea610.js  layout-9fe343725cd33e7c.js  (+2 more)
dashboard_build/_next/static/css/: 91932995637d00e7.css
dashboard_build/dashboard/: overview.html  overview.txt
migrations/: 20250706114749_create_jobs_and_txids.sql
src/: assets.rs  bitcoin_rpc.rs  config.rs  main.rs  proxy_state.rs
src/api/: bitcoin_rpc.rs  dashboard.rs  jd_event_ws.rs  mempool.rs  mod.rs  routes.rs  stats.rs  utils.rs
src/dashboard/: assets.rs  dashboard.rs  jd_event_ws.rs  mod.rs
src/db/: handlers.rs  mod.rs  model.rs
src/ingress/: sv1_ingress.rs
src/jd_client/: error.rs  mod.rs  task_manager.rs
src/jd_client/job_declarator/: message_handler.rs  mod.rs  setup_connection.rs
src/jd_client/mining_downstream/: mod.rs
src/jd_client/mining_upstream/: upstream.rs
src/jd_client/template_receiver/: mod.rs  setup_connection.rs
src/minin_pool_connection/: errors.rs  mod.rs  task_manager.rs
src/router/: mod.rs
src/share_accounter/: errors.rs  mod.rs
src/shared/: utils.rs
src/translator/: error.rs  mod.rs  utils.rs
src/translator/downstream/: accept_connection.rs  diff_management.rs  downstream.rs  notify.rs  receive_from_downstream.rs  send_to_downstream.rs  task_manager.rs
src/translator/proxy/: bridge.rs  next_mining_notify.rs
src/translator/upstream/: diff_management.rs  task_manager.rs  upstream.rs
(+8 files in other folders)
