[package]
name = "demand-cli"
version = "0.1.4"
edition = "2021"

[dependencies]
dashmap = {version = "6.1.0", features = ["inline"]}
bitcoin = {version = "0.32.5", features = ["serde","rand"]}
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio-util = { version = "*", features = ["codec"] }
nohash-hasher = "*"
futures = "*"
async-recursion = "1.0.0"
lazy_static = "1.4.0"
rand = "0.8.4"
tracing = { version = "0.1" }
tracing-subscriber = { version = "*", features = ["env-filter"]}
tokio = {version="^1.36.0",features = ["full","tracing", "macros","rt-multi-thread"]}
key-utils = "1.0.0"
pid = { version = "4.0.0"}
clap = {version = "4.5.31", features = ["derive"]}
axum = {version = "0.8.1"}
serde = { version = "1.0.219", features = ["derive"] }  
sysinfo = {version = "0.33.1"}
primitive-types = { version = "0.13.1" }
hex={version = "*"}
#roles_logic_sv2 = "1.2.1"
#sv1_api = "1.0.1"
#demand-sv2-connection = "0.0.3"
#framing_sv2 = "^2.0.0"
#binary_sv2 = "1.1.0"
#demand-share-accounting-ext = "0.0.10"

#noise_sv2 = "1.1.0"
#codec_sv2 = { version = "1.2.1", features = ["noise_sv2","with_buffer_pool"]}

#demand-share-accounting-ext = {path = "../demand-share-accounting-ext"}
#demand-sv2-connection = { path = "../demand-sv2-connection"}
#roles_logic_sv2 = { path = "../stratum/protocols/v2/roles-logic-sv2"}
#framing_sv2 = { path = "../stratum/protocols/v2/framing-sv2"}
#binary_sv2 = { path = "../stratum/protocols/v2/binary-sv2/binary-sv2"}
#noise_sv2 = {path ="../stratum/protocols/v2/noise-sv2"}
#codec_sv2 = {features = ["noise_sv2","with_buffer_pool"], path = "../stratum/protocols/v2/codec-sv2" }
#sv1_api = {path = "../stratum/protocols/v1" }

demand-share-accounting-ext = { git = "https://github.com/demand-open-source/share-accounting-ext"}
demand-sv2-connection = {git = "https://github.com/demand-open-source/demand-sv2-connection"}
roles_logic_sv2 = { git = "https://github.com/demand-open-source/stratum", branch ="ImproveCoinbase", subdirectory = "protocols/v2/roles-logic-sv2"}
framing_sv2 = { git = "https://github.com/demand-open-source/stratum", branch = "ImproveCoinbase",subdirectory = "protocols/v2/framing_sv2" }
binary_sv2 = { git = "https://github.com/demand-open-source/stratum", branch ="ImproveCoinbase",subdirectory = "protocols/v2/binary_sv2"}
noise_sv2 = { git = "https://github.com/demand-open-source/stratum", branch="ImproveCoinbase",subdirectory = "protocols/v2/noise-sv2"}
codec_sv2 = { git = "https://github.com/demand-open-source/stratum", branch="ImproveCoinbase",subdirectory = "protocols/v2/codec-sv2", features = ["noise_sv2","with_buffer_pool"]}
sv1_api = { git = "https://github.com/demand-open-source/stratum", branch = "ImproveCoinbase",subdirectory = "protocols/v1"}





[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"

[profile.release]
strip = true
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "*"
